# maestro

./: LICENSE  README.md  pyproject.toml
examples/direct/: example.py  example_dag.py
examples/json/: example.json
examples/yaml/: example.yaml
maestro/core/: __init__.py  config.py  orchestrator.py  state.py  task.py
maestro/examples/: examples
maestro/examples/json/: example.py
maestro/examples/yaml/: example.py
maestro/tasks/: sum.py
tests/core/config/: test_config.py
tests/core/config/json/: circular_reference.json  duplicate_dependencies.json  duplicate_name.json  invalid_dependencies.json  missing_name.json  undefined_dependencies.json  valid.json
tests/core/config/yaml/: circular_reference.yaml  duplicate_name.yaml  duplicated_dependencies.yaml  invalid_dependencies.yaml  missing_name.yaml  undefined_dependencies.yaml  valid.yaml
