[tool.poetry]
name = "maestro"
version = "0.1.0"
description = "Another data engineering framewokr"
authors = ["squerez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
networkx = "^3.1"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
